@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-4
-Date: 2011-11-22
+Date: 2011-11-23
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
