@@ -13,6 +13,7 @@ export("+.section",
        as.coastline,
        as.ctd,
        as.drifter,
+       as.echosounder,
        as.lobo,
        as.pt,
        as.sealevel,
@@ -143,6 +144,7 @@ export("+.section",
        read.ctd.woce,
        read.ctd.odf,
        read.drifter,
+       read.echosounder,
        read.lobo,
        read.met,
        read.topo,
@@ -168,6 +170,7 @@ export("+.section",
        stickplot,
        subset.oce,
        summary.ctd,
+       summary.echosounder,
        summary.met,
        summary.sealevel,
        sunAngle,
