@@ -12,6 +12,7 @@ setClass("cm", contains="oce")
 setClass("coastline", contains="oce")
 setClass("ctd", contains="oce")
 setClass("drifter", contains="oce")
+setClass("echosounder", contains="oce")
 setClass("lobo", contains="oce")
 setClass("met", contains="oce")
 setClass("pt", contains="oce")
