@@ -1,4 +1,5 @@
 0.8-4
+- add echosounder support
 - fullFilename(): handle URLs properly
 - ADV objects: add access to slow variables (e.g. headingSlow)
 
